# cockroach

./: .coveragerc  .gitignore  .isort.cfg  .pydocstyle  .travis.yml  LICENSE.txt  MANIFEST.in  README.rst  setup.cfg  tox.ini
docs/: conf.py  index.rst
src/cockroach/: __init__.py  __main__.py  models.py
src/cockroach/german/: __init__.py
tests/test_cockroach/: test_init.py  test_main.py
