[metadata]
name = cockroach
version = attr: cockroach.__version__
url = https://github.com//chatties-io/cockroach
author = Geoffrey Royer
author_email = geoffrey.royer@gmail.com
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python
    Topic :: Software Development
    Topic :: Utilities
license = MIT
license_files = LICENSE.txt
description = Scrap news websites for statistics on words.
long_description = file: README.rst

[options]
zip_safe = False
install_requires =
    aiohttp
    colorama
    click
python_requires = >=3.7, !=3.4.*, !=3.5.*, !=3.6.*, <4
packages = find:
package_dir = = src

[options.extras_require]
dev =
    black
    coverage
    flake8
    isort
    mypy
    pytest
    sphinx
    sphinxcontrib-programoutput
    tox

[options.entry_points]
console_scripts =
    cockroach = cockroach.__main__:main

[options.packages.find]
where = src

[bdist_wheel]
universal = 1
